custom scrollbar and submit btn css fixed

--- a/src/scss/components/_common.scss
+++ b/src/scss/components/_common.scss
@@ -1,26 +1,45 @@
-.bottom-border{
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba($brown,0.5);
-    position: relative;
-    margin-bottom: 30px;
-    &::after{
-        content: '';
-        position: absolute;
-        height: 5px;
-        background: $brown;
-        width: 30px;
-        bottom: -2.5px;
-        left: 0;
-    }
-    h6{
-     font-size: rem(22);
-     color: $secondary-black;
-     line-height: 23.3px;
-    }
+/* For Webkit-based browsers like Chrome, Safari */
+.custom-scrollbar {
+    &::-webkit-scrollbar {
+        width: 4px; /* Set the scrollbar width */
+      }
+    
+      &::-webkit-scrollbar-track {
+        background: $slate; /* Track color */
+      }
+    
+      &::-webkit-scrollbar-thumb {
+        background-color: $grey; /* Scrollbar thumb color */
+        border-radius: 10px; /* Roundness of the scroll thumb */
+      }
+    
+      /* For Firefox */
+      scrollbar-width: thin; /* Set scrollbar width */
+      scrollbar-color: $grey $slate; /* Thumb color, track color */
 }
 
-.horizontal-border{
-    margin-block: 20px;
-    border-bottom: 1px solid rgba($ligh-grey, 0.2);
-   
+.bottom-border {
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba($brown, 0.5);
+  position: relative;
+  margin-bottom: 30px;
+  &::after {
+    content: "";
+    position: absolute;
+    height: 5px;
+    background: $brown;
+    width: 30px;
+    bottom: -2.5px;
+    left: 0;
+  }
+  h6 {
+    font-size: rem(22);
+    color: $secondary-black;
+    line-height: 23.3px;
+  }
+}
+
+.horizontal-border {
+  margin-block: 20px;
+  border-bottom: 1px solid rgba($ligh-grey, 0.2);
 }
