--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -6,10 +6,10 @@
       rgba(255, 255, 255, 0) 61.25%
     ),
     url(./../images/home-banner.png);
-  background-repeat: no-repeat; 
-  background-position: center; 
-  background-size: cover; 
-  width: 100%; 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
   height: 310px;
 
   &__content {
@@ -20,9 +20,12 @@
       text-align: right;
       text-transform: uppercase;
       font-size: rem(30);
-      padding-top: 47px;
+      padding-top: 80px;
       color: $white;
       text-shadow: 0px 4px 10px #340e06cc;
+      @include media-breakpoint-up(lg) {
+        padding-top: 47px;
+      }
     }
   }
 }
@@ -141,7 +144,6 @@
       height: 3rem;
       width: 3em;
       font-size: rem(14);
-    
     }
     #days div:hover {
       background: var(--accent-2);
@@ -212,6 +214,9 @@
       .date-picker {
         background-color: $slate;
       }
+    }
+    .button {
+      text-transform: uppercase;
     }
   }
   .multimedia-content {
